@@ -27,7 +27,8 @@
     - ad_unlock_account works properly (thanks Francowxu)
     - added Microsoft security descriptor control (thanks Dirk-jan)
     - fixed search in mock strategies when raise_exceptions=True (thanks Derek)
-    - formatters never raises exceptions (thanks Giorgio)
+    - formatters never raise exceptions but returns the raw_value when unable to format
+    - fixed comtrols duplication in paged search (thanks Dirk-jan)
 
 # 2.4.1 - 2018.01.21
     - tested against pyasn1 from version 0.1.8 up to version 0.4.2, Python 2.6.6, Python 2.7.14, Python 3.6.4
