@@ -21,6 +21,14 @@
     - connection.extend.paged_search() doens't miss the last entries anymore when size limit is exceeded for the search on the server (thanks Friedrich)
     - validators are not applied when loading data from json dump in Mock strategies (thanks Derek)
     - additional validator to check for erroneous bytes to string conversion in Python 3 (thanks Brian)
+    - additional formatter and validator to check for generalizedtime with 0 year (thanks Brian)
+    - added ADDITIONAL_CLIENT_ENCODINGS parameter
+    - fixed AD dir_sync extended operation (thanks Lucas)
+    - ad_unlock_account works properly (thanks Francowxu)
+    - added Microsoft security descriptor control (thanks Dirk-jan)
+    - fixed search in mock strategies when raise_exceptions=True (thanks Derek)
+    - formatters never raise exceptions but returns the raw_value when unable to format
+    - fixed comtrols duplication in paged search (thanks Dirk-jan)
 
 # 2.4.1 - 2018.01.21
     - tested against pyasn1 from version 0.1.8 up to version 0.4.2, Python 2.6.6, Python 2.7.14, Python 3.6.4
